# timeseries

./: .gitignore  LICENSE  Makefile  README.md  launch.sh  pyproject.toml
model/: __init__.py
model/dictionnary/: __init__.py  dictionary.py
model/model1/: __init__.py  model1.py
model/model2/: __init__.py  model2.py
model/wavelet/: __init__.py  wavelet.py
notebooks/jump/: jump_density.ipynb  jump_density.py  jump_density_hongkong.ipynb  jump_density_hongkong.py  jump_density_poland.ipynb  jump_density_poland.py  jump_detection.ipynb  jump_detection.py  plot_utils.ipynb  plot_utils.py  poland_comparison_scattering.ipynb  poland_comparison_scattering.py  reproduce_hong_kong.ipynb  reproduce_hong_kong.py  reproduce_multi_stock.ipynb  reproduce_multi_stock.py  reproduce_poland.ipynb  reproduce_poland.py  reproduce_poland_daily.ipynb  reproduce_poland_hourly.ipynb  reproduce_single_stock.ipynb  reproduce_single_stock.py  run_all_plots.sh  volatility_profile_classification.ipynb  volatility_profile_classification.py
notebooks/pca/: stooq_hungary.ipynb
notebooks/stooq_examples/: viz.ipynb
notebooks/tp1/: 01_Clustering_Time_Seriesçjanis.ipynb  notes.md
refs/papers/: ridingwavelets.pdf:Zone.Identifier
refs/report/: ideas.md  report.tex
refs/texsources/ridingwavelets/: biblio.bib  main.bbl  main.tex
refs/tp1/: Assignment 1 - ML for TS (MVA).ipynb  JanisAiad_JordiBaroja.ipynb  consignes.tex  tp1.aux  tp1.fdb_latexmk  tp1.fls  tp1.out  tp1.tex  tp1.toc
refs/tp1/consignes/: consignes.tex
refs/tps/assignment3/: Assignment 3 (1).ipynb  Assignment 3 (1).py  Assignment 3 copy.ipynb  Assignment 3 copy.py  Assignment 3.ipynb  Assignment 3.py  COMPLETION_SUMMARY.txt  JanisAiad_JordiBarojaFernandez.aux  assignment3_torunall.py  (+20 more)
refs/tutorials-mva-2025-2026/: .gitignore
tests/: test_env.py  test_tensorflow.py
utils/: __init__.py  utils.py
utils/data/: __init__.py  curating_stooq.py  jump_detection.py  panel_to_long.py
utils/viz/: __init__.py  quick_looks.py  viz_stooq.py  wavelet_embed.py
(+8316 files in other folders)
