[project]
name = "timeseries"
version = "0.1.0"
description = "Time Series Analysis for MVA course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aeon>=1.0.0",
    "alphacsc",
    "dtw-python>=1.7.2",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "loadmydata>=0.0.11",
    "matplotlib>=3.9.3",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pytest>=8.3.5",
    "pywavelet>=0.2.8",
    "pywavelets>=1.9.0",
    "ruff>=0.8.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "tach>=0.16.3",
    "torch>=2.9.0",
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {timeseries = '.', utils = "utils/", model = "model/"} # you can write inside the brackets something like "Model1" = "models/model1/", "Model2" = "models/model2/"
packages = ["timeseries", "utils", "model"] # same, smth like ["Model1", "Model2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]

[tool.uv.sources]
alphacsc = { git = "https://github.com/alphacsc/alphacsc.git" }
